--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,12 @@
 .home {
+  header {
+    border-bottom: 2px dashed @silver;
+    padding-bottom: 1.8rem;
+
+    img {
+      margin-bottom: 1.8rem;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
