--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,10 @@
 // Mixins in here
+.btn {
+	background-color: #17A2B8;
+	font-size: 1.6rem;
+	color: #FFFFFF;
+	text-align: center;
+	padding: 1.6rem;
+	border-radius: 11px;
+	width: 83%;
+}
