--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,34 @@
 // Navigation Styles here
+nav {
+	width: 100%;
+	height: 9rem;
+	border-bottom: 2px dashed @navigation-border;
+
+	.container-nav {
+		width: 80rem;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		margin: 0 auto;
+
+		.container-nav-logo {
+			width: 19%;
+		}
+
+		ul {
+			width: 81%;
+			display: flex;
+			justify-content: flex-end;
+	
+			li {
+				margin-right: 3rem;
+	
+				a {
+					font-size: 1.3rem;
+					text-decoration: none;
+					color: @shark;
+				}
+			} // <-- li 
+		} // <-- ul
+	} // <-- container-nav
+} // <-- nav
