Mobile Updates *Added mobile media querie to variables *Made mobile design

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -67,3 +67,52 @@
     }
   }
 }// home
+
+@media @mobile {
+  .home {
+
+    .content-section {
+      flex-flow: column;
+      width: 100%;
+
+      .text-content {
+        width: 100%;
+        padding-right: 0;
+      }
+
+      .img-content {
+        width: 100%;
+        padding-left: 0;
+
+        img {
+          width: 100%;
+        }
+      }
+    }
+
+    .inverse-content {
+      flex-flow: column-reverse;
+    }
+
+    .content-destination {
+      width: 100%;
+      margin: 0 auto;
+      margin-bottom: 3.4rem;
+    }
+
+    .content-pick {
+      padding-top: 30px;
+      border-top: 2px dashed #C0C0C0;
+      display: flex;
+      flex-flow: column;
+      justify-content: space-between;
+
+      .destination {
+        width: 85%;
+        margin: 0 auto;
+        margin-bottom: 3.3rem;
+
+      }
+    }
+  }
+}
