--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,12 @@
   border-radius: 11px;
   width: 83%;
 }
+@media (max-width: 500px) {
+  .btn {
+    width: 95%;
+    margin: auto;
+  }
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -177,6 +183,13 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    max-width: 45rem;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
 nav {
   width: 100%;
   height: 9rem;
@@ -204,6 +217,44 @@ nav .container-nav ul li a {
   font-size: 1.3rem;
   text-decoration: none;
   color: #212529;
+}
+@media (max-width: 500px) {
+  nav {
+    width: 100%;
+    height: 9rem;
+    border-bottom: 2px dashed #C0C0C0;
+  }
+  nav .container-nav {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+    margin: 0 auto;
+  }
+  nav .container-nav .container-nav-logo {
+    width: 100%;
+    margin-top: 1.9rem;
+    text-align: center;
+    margin-bottom: 2.5rem;
+  }
+  nav .container-nav .container-nav-logo .nav-logo {
+    font-size: 1.9rem;
+  }
+  nav .container-nav ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 1.2rem;
+  }
+  nav .container-nav ul li {
+    margin-right: 0;
+  }
+  nav .container-nav ul li a {
+    font-size: 1.3rem;
+    text-decoration: none;
+    color: #212529;
+  }
 }
 .footer {
   width: 100%;
@@ -268,4 +319,41 @@ nav .container-nav ul li a {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-flow: column;
+    width: 100%;
+  }
+  .home .content-section .text-content {
+    width: 100%;
+    padding-right: 0;
+  }
+  .home .content-section .img-content {
+    width: 100%;
+    padding-left: 0;
+  }
+  .home .content-section .img-content img {
+    width: 100%;
+  }
+  .home .inverse-content {
+    flex-flow: column-reverse;
+  }
+  .home .content-destination {
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 3.4rem;
+  }
+  .home .content-pick {
+    padding-top: 30px;
+    border-top: 2px dashed #C0C0C0;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+  }
+  .home .content-pick .destination {
+    width: 85%;
+    margin: 0 auto;
+    margin-bottom: 3.3rem;
+  }
 }
