--- a/less/global.less
+++ b/less/global.less
@@ -44,3 +44,13 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+
+@media @mobile {
+  .container {
+    max-width: 45rem;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+}
+
