--- a/less/navigation.less
+++ b/less/navigation.less
@@ -32,3 +32,48 @@ nav {
 		} // <-- ul
 	} // <-- container-nav
 } // <-- nav
+
+@media @mobile {
+	nav {
+		width: 100%;
+		height: 9rem;
+		border-bottom: 2px dashed @navigation-border;
+	
+		.container-nav {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			flex-flow: column;
+			margin: 0 auto;
+	
+			.container-nav-logo {
+				width: 100%;
+				margin-top: 1.9rem;
+				text-align: center;
+				margin-bottom: 2.5rem;
+
+				.nav-logo {
+					font-size: 1.9rem;
+				}
+			}
+	
+			ul {
+				width: 100%;
+				display: flex;
+				justify-content: space-evenly;
+				margin-bottom: 1.2rem;
+		
+				li {
+					margin-right: 0;
+		
+					a {
+						font-size: 1.3rem;
+						text-decoration: none;
+						color: @shark;
+					}
+				} // <-- li 
+			} // <-- ul
+		} // <-- container-nav
+	} // <-- nav
+}
