--- a/less/navigation.less
+++ b/less/navigation.less
@@ -33,6 +33,22 @@ nav {
 	} // <-- container-nav
 } // <-- nav
 
+@media @tablet {
+	nav {
+
+		.container-nav {
+			width: auto;
+
+			.container-nav-logo {
+
+				.nav-logo {
+					font-size: 2.6rem;
+				}
+			}
+		}
+	}
+}
+
 @media @mobile {
 	nav {
 		width: 100%;
@@ -77,3 +93,4 @@ nav {
 		} // <-- container-nav
 	} // <-- nav
 }
+
