--- a/less/global.less
+++ b/less/global.less
@@ -45,12 +45,23 @@ img {
   margin: 0 auto;
 }
 
+@media @tablet {
+  .container {
+    max-width: 80rem;
+    width: 95%;
+    margin: 0 auto;
+  }
+}
+
 @media @mobile {
   .container {
     max-width: 45rem;
     width: 100%;
     margin: 0 auto;
   }
-
 }
+
+
+
+
 
