--- a/less/home-page.less
+++ b/less/home-page.less
@@ -68,6 +68,47 @@
   }
 }// home
 
+@media @tablet {
+  .home {
+
+    .content-section {
+      flex-flow: column;
+      width: 100%;
+
+      .text-content {
+        width: 100%;
+        padding-right: 0;
+      }
+
+      .img-content {
+        width: 100%;
+        padding-left: 0;
+
+        img {
+          width: 100%;
+        }
+      }
+    }
+
+    .inverse-content {
+      flex-flow: column-reverse;
+    }
+
+    .content-destination {
+      width: 100%;
+      max-width: 75%;
+      margin: 0 auto;
+      margin-bottom: 3.4rem;
+
+      img {
+        display: block;
+        margin: auto;
+      }
+    }
+
+  }
+}
+
 @media @mobile {
   .home {
 
